[tool.poetry]
name = "geohealthaccess"
version = "1.0.0"
description = "Mapping accessibility to health services"
authors = ["Yann Forget <yannforget@mailbox.org>"]
maintainers = ["Yann Forget <yannforget@mailbox.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blsq/geohealthaccess"
repository = "https://github.com/blsq/geohealthaccess"
documentation = "https://github.com/blsq/geohealthaccess"
keywords = [
    "GIS",
    "health",
    "accessibility mapping",
]

[tool.poetry.dependencies]
python = "^3.9.0"
appdirs = "^1.4.0"
beautifulsoup4 = "^4.10.0"
click = "^8.0.0"
fiona = "^1.8.0"
gcsfs = "^2021.10.0"
geopandas = "^0.10.0"
loguru = "^0.5.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
rasterio = "^1.2.0"
requests = "^2.26.0"
s3fs = "^2021.10.0"
shapely = "^1.8.0"
tqdm = "^4.62.0"
rasterstats = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
pytest-cov = "*"
psutil = "*"

[tool.poetry.urls]
issues = "https://github.com/blsq/geohealthaccess/issues"

[tool.poetry.scripts]
geohealthaccess = "geohealthaccess.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
    "web: marks tests as making web requests"
]
filterwarnings = [
    # library issue in geopandas
    "ignore:Sequential read:RuntimeWarning",
    # library issue in rasterstats. could be an issue with python>=3.10
    "ignore:Using or importing the ABCs:DeprecationWarning",
    # library issue in rasterstats. could be an issue with rasterio>=3.0
    "ignore:Right multiplication:DeprecationWarning"
]